fix grid not fitting 100.git/index of container after offset

--- a/scss/core/objects/_grids.scss
+++ b/scss/core/objects/_grids.scss
@@ -42,7 +42,6 @@
 	@include px-and-rem(margin-left, -$base-spacing-unit);
 	list-style: none;
 	margin-bottom: 0;
-	max-width: 100%;
 
 	@if $use-flexbox-grid { @include display(flex);}
 }
